Added User registry files on project

--- a/first-node-project/.eslintrc.json
+++ b/first-node-project/.eslintrc.json
@@ -19,15 +19,16 @@
       "prettier"
   ],
   "rules": {
+    "prettier/prettier": "error",
     "class-methods-use-this": "off",
-     "import/extensions": [
+    "@typescript-eslint/camelcase": "off",
+    "import/extensions": [
       "error",
       "ignorePackages",
       {
         "ts": "never"
       }
-    ],
-    "prettier/prettier": "error"
+    ]
   },
   "settings": {
     "import/resolver": {
