--- a/gobarber-web/package.json
+++ b/gobarber-web/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^16.9.0",
     "@unform/core": "^2.1.3",
     "@unform/web": "^2.1.3",
+    "axios": "^0.20.0",
     "polished": "^4.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -40,6 +41,7 @@
     ]
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/styled-components": "^5.1.4",
     "@types/yup": "^0.29.8",
     "@typescript-eslint/eslint-plugin": "^4.4.0",
