--- a/gobarber-web/package.json
+++ b/gobarber-web/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/uuidv4": "^5.0.0",
     "@unform/core": "^2.1.3",
     "@unform/web": "^2.1.3",
     "axios": "^0.20.0",
@@ -20,6 +21,7 @@
     "react-scripts": "3.4.3",
     "styled-components": "^5.2.0",
     "typescript": "~3.7.2",
+    "uuidv4": "^6.2.4",
     "yup": "^0.29.3"
   },
   "scripts": {
