--- a/appgobarber/.eslintrc.json
+++ b/appgobarber/.eslintrc.json
@@ -11,7 +11,8 @@
   ],
   "globals": {
     "Atomics": "readonly",
-    "SharedArrayBuffer": "readonly"
+    "SharedArrayBuffer": "readonly",
+    "__DEV__": "readonly"
   },
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
@@ -28,6 +29,7 @@
     "prettier"
   ],
   "rules": {
+    "no-use-before-define": "off",
     "prettier/prettier": "error",
     "react/jsx-one-expression-per-line": "off",
     "react/jsx-props-no-spreading": "off",
