--- a/appgobarber/package.json
+++ b/appgobarber/package.json
@@ -14,7 +14,7 @@
     "@react-navigation/native": "^5.7.6",
     "@react-navigation/stack": "^5.9.3",
     "eslint-config-airbnb": "^18.2.0",
-    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react": "^7.19.0",
     "react": "16.13.1",
     "react-native": "0.63.3",
     "react-native-gesture-handler": "^1.8.0",
@@ -32,11 +32,15 @@
     "@types/react-test-renderer": "^16.9.2",
     "@types/styled-components": "^5.1.4",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
-    "@typescript-eslint/parser": "^2.27.0",
+    "@typescript-eslint/parser": "^4.4.1",
     "babel-jest": "^25.1.0",
-    "eslint": "^5.16.0",
-    "eslint-config-prettier": "^6.12.0",
+    "eslint": "6.8.0",
+    "eslint-config-prettier": "^6.13.0",
+    "eslint-import-resolver-typescript": "^2.3.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react-hooks": "^2.5.0",
     "jest": "^25.1.0",
     "metro-react-native-babel-preset": "^0.59.0",
     "prettier": "^2.1.2",
