--- a/appgobarber/ios/appgobarber/Info.plist
+++ b/appgobarber/ios/appgobarber/Info.plist
@@ -56,8 +56,8 @@
 	<key>UIAppFonts</key>
 	<array>
 		<string>RobotoSlab-Regular.ttf</string>
-		<string>RobotoSlab-SemiBold.ttf</string>
 		<string>RobotoSlab-Medium.ttf</string>
+    <string>Feather.ttf</string>
 	</array>
 </dict>
 </plist>
