--- a/appgobarber/package.json
+++ b/appgobarber/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/stack": "^5.9.3",
     "@unform/core": "^2.1.3",
     "@unform/mobile": "^2.1.3",
+    "axios": "^0.20.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-plugin-react": "^7.19.0",
     "react": "16.13.1",
@@ -32,6 +33,7 @@
     "@babel/core": "^7.8.4",
     "@babel/runtime": "^7.8.4",
     "@react-native-community/eslint-config": "^1.1.0",
+    "@types/axios": "^0.14.0",
     "@types/jest": "^25.2.3",
     "@types/react-native": "^0.63.2",
     "@types/react-native-vector-icons": "^6.4.6",
