--- a/gobarber-backend/.eslintrc.json
+++ b/gobarber-backend/.eslintrc.json
@@ -28,17 +28,7 @@
     "@typescript-eslint/no-unused-vars": ["error", {
       "argsIgnorePattern": "_"
     }],
-    "@typescript-eslint/naming-convention": [
-      "error",
-      {
-        "selector": "interface",
-        "format": ["PascalCase"],
-        "custom": {
-          "regex": "^I[A-Z]",
-          "match": true
-        }
-      }
-    ],
+    "prefixWithI": "always",
     "import/extensions": [
       "error",
       "ignorePackages",
