Solved a problem with the Entities address

--- a/gobarber-backend/ormconfig.json
+++ b/gobarber-backend/ormconfig.json
@@ -6,7 +6,7 @@
   "password": "docker",
   "database": "gostack_gobarber",
   "entities": [
-    "./src/models/**/infra/typeorm/entities/*.ts"
+    "./src/modules/**/infra/typeorm/entities/*.ts"
 	],
   "migrations": [
     "./src/shared/infra/typeorm/migrations/*.ts"
@@ -15,3 +15,5 @@
     "migrationsDir":"./src/shared/infra/typeorm/migrations"
   }
 }
+
+
