--- a/gobarber-backend/.eslintrc.json
+++ b/gobarber-backend/.eslintrc.json
@@ -1,33 +1,40 @@
 {
   "env": {
-      "es2020": true,
-      "node": true,
-      "jest": true
+    "es6": true,
+    "node": true,
+    "jest": true
   },
   "extends": [
-      "airbnb-base",
-      "plugin:@typescript-eslint/recommended",
-      "prettier/@typescript-eslint",
-      "plugin:prettier/recommended"
+    "airbnb-base",
+    "plugin:@typescript-eslint/recommended",
+    "prettier/@typescript-eslint",
+    "plugin:prettier/recommended"
   ],
+  "globals": {
+    "Atomics": "readonly",
+    "SharedArrayBuffer": "readonly"
+  },
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-      "ecmaVersion": 2018,
-      "sourceType": "module"
+    "ecmaVersion": 2018,
+    "sourceType": "module"
   },
   "plugins": [
-      "@typescript-eslint",
-      "prettier"
+    "@typescript-eslint",
+    "prettier"
   ],
   "rules": {
+    "no-underscore-dangle": "off",
     "prettier/prettier": "error",
     "class-methods-use-this": "off",
+    "@typescript-eslint/camelcase": "off",
     "camelcase": "off",
     "no-useless-constructor": "off",
-    "@typescript-eslint/camelcase": "off",
+    "import/no-duplicates": "off",
     "@typescript-eslint/no-unused-vars": ["error", {
       "argsIgnorePattern": "_"
     }],
+
     "@typescript-eslint/naming-convention": [
       "error",
       {
@@ -39,6 +46,7 @@
         }
       }
     ],
+
     "import/extensions": [
       "error",
       "ignorePackages",
