--- a/gobarber-backend/package.json
+++ b/gobarber-backend/package.json
@@ -37,8 +37,8 @@
     "@types/nodemailer": "^6.4.0",
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
-    "@typescript-eslint/parser": "^4.6.1",
-    "eslint": "^5.16.0",
+    "@typescript-eslint/parser": "^4.6.2-alpha.0",
+    "eslint": "6.8.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-import-resolver-typescript": "^2.3.0",
