--- a/gobarber-backend/package.json
+++ b/gobarber-backend/package.json
@@ -45,6 +45,7 @@
     "eslint-plugin-import": "^2.21.2",
     "eslint-plugin-prettier": "^3.1.4",
     "jest": "^26.6.1",
+    "mongodb": "^3.6.2",
     "prettier": "^2.1.2",
     "ts-jest": "^26.4.2",
     "ts-node-dev": "^1.0.0-pre.61",
