--- a/gobarber-backend/package.json
+++ b/gobarber-backend/package.json
@@ -11,6 +11,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "mongodb": "^3.6.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "date-fns": "^2.16.1",
@@ -33,6 +34,7 @@
     "@types/handlebars": "^4.1.0",
     "@types/jest": "^26.0.15",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/mongodb": "^3.5.32",
     "@types/multer": "^1.4.4",
     "@types/nodemailer": "^6.4.0",
     "@types/uuid": "^8.3.0",
@@ -45,7 +47,6 @@
     "eslint-plugin-import": "^2.21.2",
     "eslint-plugin-prettier": "^3.1.4",
     "jest": "^26.6.1",
-    "mongodb": "^3.6.2",
     "prettier": "^2.1.2",
     "ts-jest": "^26.4.2",
     "ts-node-dev": "^1.0.0-pre.61",
