--- a/gobarber-backend/package.json
+++ b/gobarber-backend/package.json
@@ -15,6 +15,7 @@
     "celebrate": "^13.0.3",
     "cors": "^2.8.5",
     "date-fns": "^2.16.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.6",
@@ -31,6 +32,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.8",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.8",
     "@types/handlebars": "^4.1.0",
     "@types/jest": "^26.0.15",
