--- a/gobarber-backend/.env.example
+++ b/gobarber-backend/.env.example
@@ -1,2 +1,10 @@
 APP_SECRET=
 APP_WEB_URL=http://localhost:3000
+APP_API_URL=http://localhost:3000
+
+MAIL_DRIVER=ethereal
+#MAIL_DRIVER=ses
+
+#AWS Credentials
+# AWS_ACCESS_KEY_ID=
+# AWS_SECRET_ACCESS_KEY=
