--- a/gobarber-backend/package.json
+++ b/gobarber-backend/package.json
@@ -11,6 +11,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "aws-sdk": "^2.786.0",
     "bcryptjs": "^2.4.3",
     "celebrate": "^13.0.3",
     "class-transformer": "^0.3.1",
@@ -31,6 +32,7 @@
     "uuid": "^8.3.1"
   },
   "devDependencies": {
+    "@types/aws-sdk": "^2.7.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.8",
     "@types/dotenv": "^8.2.0",
