Amazon S3 upload class

--- a/gobarber-backend/.env.example
+++ b/gobarber-backend/.env.example
@@ -1,10 +1,21 @@
 APP_SECRET=
+
 APP_WEB_URL=http://localhost:3000
 APP_API_URL=http://localhost:3000
 
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+
+REDIS_HOST=
+REDIS_PORT=
+REDIS_PASS=
+
+# Storage
+#STORAGE_DRIVER=s3
+STORAGE_DRIVER=disk
+
+# Mail
 MAIL_DRIVER=ethereal
 #MAIL_DRIVER=ses
 
-#AWS Credentials
-# AWS_ACCESS_KEY_ID=
-# AWS_SECRET_ACCESS_KEY=
+
