--- a/gobarber-backend/package.json
+++ b/gobarber-backend/package.json
@@ -21,6 +21,7 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.6",
+    "ioredis": "^4.19.2",
     "jsonwebtoken": "^8.5.1",
     "mime": "^2.4.6",
     "mongodb": "^3.6.2",
@@ -39,6 +40,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.8",
     "@types/handlebars": "^4.1.0",
+    "@types/ioredis": "^4.17.7",
     "@types/jest": "^26.0.15",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongodb": "^3.5.32",
