--- a/gobarber-web/package.json
+++ b/gobarber-web/package.json
@@ -23,6 +23,7 @@
     "react-spring": "^8.0.27",
     "styled-components": "^5.2.0",
     "typescript": "~3.7.2",
+    "uuid": "^8.3.1",
     "uuidv4": "^6.2.4",
     "yup": "^0.29.3"
   },
@@ -48,6 +49,7 @@
     "@types/axios": "^0.14.0",
     "@types/react-router-dom": "^5.1.6",
     "@types/styled-components": "^5.1.4",
+    "@types/uuid": "^8.3.0",
     "@types/yup": "^0.29.8",
     "@typescript-eslint/eslint-plugin": "^4.4.0",
     "@typescript-eslint/parser": "^4.4.0",
