--- a/gobarber-web/package.json
+++ b/gobarber-web/package.json
@@ -14,6 +14,7 @@
     "@unform/core": "^2.1.3",
     "@unform/web": "^2.1.3",
     "axios": "^0.20.0",
+    "date-fns": "^2.16.1",
     "polished": "^4.0.2",
     "react": "^16.13.1",
     "react-day-picker": "^7.4.8",
@@ -48,6 +49,7 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/date-fns": "^2.6.0",
     "@types/react-router-dom": "^5.1.6",
     "@types/styled-components": "^5.1.4",
     "@types/uuid": "^8.3.0",
